# ros_collection_robot

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  package.xml
config/: map.yaml  waypoints.yaml
docs/html/: class_clipper_lib_1_1_clipper_offset.html  class_clipper_lib_1_1_poly_tree-members.html  class_clipper_lib_1_1clipper_exception-members.html  class_order_manager-members.html  class_path_planner__coll__graph.md5  classes.html  clipper_8hpp_source.html  decoder_8cpp.html  decoder_8h.html  decoder_8h__dep__incl.md5  decoder_8h__incl.map  decoder_8h__incl.md5  decoder__test_8cpp__incl.map  decoder__test_8cpp__incl.md5  dir_13e138d54eb8818da29c3992edef070a_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_1.map  inherit_graph_15.md5  inherit_graph_16.map  inherit_graph_17.map  inherit_graph_17.md5  inherit_graph_20.map  inherit_graph_20.md5  inherit_graph_23.md5  inherit_graph_24.map  inherits.html  line_8cpp.html  line_8h__dep__incl.map  line_8h__incl.md5  line__test_8cpp.html  line__test_8cpp__incl.map  map_8cpp.html  map_8h.html  map_8h__dep__incl.map  map_8h__dep__incl.md5  (+45 more)
docs/html/search/: all_1.js  all_2.js  all_3.js  all_8.js  all_b.js  classes_2.js  classes_4.js  classes_6.js  classes_9.js  files_2.js  files_5.js  functions_5.js  functions_6.js  (+3 more)
docs/latex/: annotated.tex  class_clipper_lib_1_1_clipper_base.tex  class_clipper_lib_1_1_clipper_base__inherit__graph.md5  class_clipper_lib_1_1_clipper_offset.tex  class_decoder.tex  class_line.tex  class_node.tex  class_polygon.tex  decoder_8cpp.tex  decoder_8h__dep__incl.md5  decoder__test_8cpp.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  line_8cpp__incl.md5  line_8h.tex  line_8h__dep__incl.md5  line_8h__incl.md5  line__test_8cpp.tex  line__test_8cpp__incl.md5  map_8cpp.tex  map_8cpp__incl.md5  map_8h__dep__incl.md5  md__r_e_a_d_m_e.tex  navigator_8cpp.tex  navigator__test_8cpp.tex  node_8cpp.tex  node_8cpp__incl.md5  node_8h__dep__incl.md5  order__manager_8cpp.tex  order__manager_8h__dep__incl.md5  order__manager_8h__incl.md5  order__manager__test_8cpp.tex  path__planner_8cpp__incl.md5  path__planner_8h.tex  path__planner_8h__incl.md5  path__planner__test_8cpp__incl.md5  polygon_8cpp__incl.md5  polygon_8h__incl.md5  polygon__test_8cpp.tex  polygon__test_8cpp__incl.md5  refman.tex  (+7 more)
include/: controller.h  decoder.h  line.h  manipulator.h  map.h  navigator.h  node.h  order_manager.h  path_planner.h  polygon.h
launch/: warehouse_world.launch
models/cube_A/: model _a.sdf  model.config  model.sdf
models/cube_B/: model.config  model.sdf
models/cube_C/: model.config  model.sdf
models/cube_D/: model.config  model.sdf
models/cube_E/: model.config  model.sdf
models/cube_F/: model.config  model.sdf
models/cube_G/: model.config  model.sdf
models/cube_H/: model.config  model.sdf
models/map/: model.config  model.sdf
models/pedestal/: model.config  model.sdf
msg/: Cube.msg
results/: QuadChart.pptx  cppcheck.txt  cpplint.txt
results/html/: annotated.html  class_clipper_lib_1_1_clipper-members.html  class_clipper_lib_1_1_clipper.html  class_clipper_lib_1_1_clipper_base-members.html  class_clipper_lib_1_1_clipper_base.html  class_clipper_lib_1_1_clipper_offset-members.html  class_clipper_lib_1_1_int128-members.html  class_clipper_lib_1_1_int128.html  class_clipper_lib_1_1_poly_node-members.html  class_clipper_lib_1_1_poly_node.html  class_clipper_lib_1_1_poly_tree.html  class_clipper_lib_1_1clipper_exception.html  class_clipper_lib_1_1clipper_exception__coll__graph.md5  class_clipper_lib_1_1clipper_exception__inherit__graph.md5  class_decoder-members.html  class_decoder.html  class_line-members.html  class_line.html  class_map-members.html  class_map.html  class_navigator-members.html  class_navigator.html  class_node-members.html  class_node.html  class_order_manager.html  class_path_planner-members.html  class_path_planner.html  class_path_planner__coll__graph.map  class_polygon-members.html  class_polygon.html  decoder_8cpp__incl.map  decoder_8cpp__incl.md5  decoder_8h__dep__incl.map  decoder_8h_source.html  decoder__test_8cpp.html  dir_000002_000000.html  dir_000003_000000.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  (+74 more)
results/latex/: class_clipper_lib_1_1_clipper.tex  class_clipper_lib_1_1_clipper__coll__graph.md5  class_clipper_lib_1_1_clipper__inherit__graph.md5  class_clipper_lib_1_1_clipper_base__coll__graph.md5  class_clipper_lib_1_1_int128.tex  class_clipper_lib_1_1_poly_node.tex  class_clipper_lib_1_1_poly_node__inherit__graph.md5  class_clipper_lib_1_1_poly_tree.tex  class_clipper_lib_1_1_poly_tree__coll__graph.md5  class_clipper_lib_1_1_poly_tree__inherit__graph.md5  class_clipper_lib_1_1clipper_exception.tex  class_clipper_lib_1_1clipper_exception__coll__graph.md5  class_clipper_lib_1_1clipper_exception__inherit__graph.md5  class_map.tex  class_navigator.tex  class_order_manager.tex  class_path_planner.tex  class_path_planner__coll__graph.md5  decoder_8cpp__incl.md5  decoder_8h.tex  decoder_8h__incl.md5  decoder__test_8cpp__incl.md5  dir_13e138d54eb8818da29c3992edef070a.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  hierarchy.tex  line_8cpp.tex  map_8h.tex  map_8h__incl.md5  map__test_8cpp.tex  map__test_8cpp__incl.md5  navigator_8cpp__incl.md5  navigator_8h.tex  navigator_8h__dep__incl.md5  navigator_8h__incl.md5  navigator__test_8cpp__incl.md5  node_8h.tex  node_8h__incl.md5  node__test_8cpp.tex  node__test_8cpp__incl.md5  (+20 more)
rviz/: ros_collection_robot.rviz
src/: controller.cpp  decoder.cpp  line.cpp  main.cpp  manipulator.cpp  map.cpp  navigator.cpp  node.cpp  order_manager.cpp  path_planner.cpp  polygon.cpp
test/: decoder_test.cpp  line_test.cpp  main.cpp  main_test.launch  map_test.cpp  navigator_test.cpp  node_test.cpp  order_manager_test.cpp  order_manager_test.launch  path_planner_test.cpp  polygon_test.cpp
test/test_config/: test.yaml
worlds/: warehouse.world
(+56 files in other folders)
